Fix DCHECK in ShellPortMash.

While SetCursorTouchVisible() should never be called in --mus mode, receiving
OnCursorTouchVisibleChanged() events happens since the mus window server keeps
track of that piece of state, and we should filter them appropriately. Also
flips around another method in ShellPortMash for symmetry.

Bug: 757572
Change-Id: Ic9cdb52b804c1f96c657317b3bc6627177379d13
Reviewed-on: https://chromium-review.googlesource.com/624936
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Elliot Glaysher <erg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496126}
Former-commit-id: b0748226854f8a781ba6dd3a2f762d3b998603cc